Task3_PrometheusSetup/ingresscontroller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-postgres
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-appsvc
            port: 
              number: 8080
